--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.4.8",
+    "@nextui-org/react": "^2.1.10",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -17,12 +18,14 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "framer-motion": "^10.16.4",
     "next": "^13.4.6",
+    "next-router": "^1.3.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-redux": "^8.0.2",
+    "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
