--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,22 +11,28 @@
   "dependencies": {
     "@next/font": "^13.4.8",
     "@nextui-org/react": "^2.1.10",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "framer-motion": "^10.16.4",
+    "jwt-decode": "^4.0.0",
     "next": "^13.4.6",
+    "next-auth": "^4.24.5",
     "next-router": "^1.3.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-oauth": "^0.0.1",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
